Add border style detection and improve game format handling
- Introduced `border_style.rs` to determine appropriate border types based on environment variables.
- Added tests for border style detection.
- Enhanced `config.rs` with additional tests for game formats and their interpreters.
- Expanded `detect.rs` with comprehensive tests for format detection by headers and extensions.
- Updated `launcher.rs` to include format detection and interpreter path finding.
- Improved `main.rs` to include the new border style module.
- Added tests for network checking in `network.rs`.
- Enhanced `storage.rs` with display implementations for `LocalGame` and `SaveFile`.
- Updated UI rendering in `ui.rs` to utilize the new border style.
- Improved HTML entity decoding tests in `utils.rs`.
- Created integration tests for command-line interface in `integration_tests.rs`.
- Added dev dependencies for testing utilities in `Cargo.toml`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,12 @@ zip = "0.5"
 tempfile = "3.8"
 html-escape = "0.2"
 
+[dev-dependencies]
+mockito = "1.2"
+assert_fs = "1.0"
+predicates = "3.0"
+serial_test = "3.0"
+
 [profile.release]
 lto = true
 codegen-units = 1
