--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ chrono = { version = "0.4", features = ["serde"] }
 zip = "0.5"
 tempfile = "3.8"
 html-escape = "0.2"
+portable-pty = "0.8"
+nix = { version = "0.27", features = ["signal", "process", "ioctl", "term"] }
 
 [dev-dependencies]
 mockito = "1.2"
