--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,9 @@ zip = "0.5"
 tempfile = "3.8"
 html-escape = "0.2"
 portable-pty = "0.8"
-nix = { version = "0.27", features = ["signal", "process", "ioctl", "term", "user"] }
+nix = { version = "0.27", features = ["signal", "process", "ioctl", "term", "user", "fs"] }
+vt100 = "0.15"
+close_fds = "0.3"
 
 [dev-dependencies]
 mockito = "1.2"
